[gd_scene load_steps=5 format=3 uid="uid://8xsf5j74u2cf"]

[ext_resource type="Script" uid="uid://dk8nnm4du2m7w" path="res://content/gui/bomb_gui.gd" id="1_87gd4"]
[ext_resource type="Texture2D" uid="uid://c43ocwt4gt5wy" path="res://assets/bombs/all_bomb_set.png" id="2_2jvug"]
[ext_resource type="FontFile" uid="uid://tbc3f6f8v5hr" path="res://assets/fonts/small_font.ttf" id="3_v788k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yyuc4"]
bg_color = Color(0.133333, 0.12549, 0.203922, 1)

[node name="BombGUI" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_87gd4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_right = 16.0
offset_bottom = 16.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yyuc4")

[node name="BombIcon" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("2_2jvug")
region_enabled = true
region_rect = Rect2(32, 0, 16, 16)

[node name="BombCount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 11.0
offset_right = 17.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.598845, 0.618756, 0.191105, 1)
theme_override_fonts/font = ExtResource("3_v788k")
theme_override_font_sizes/font_size = 5
text = "0"

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
